--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                         <p class="priceText">, -</p>
                         <p class="priceOldText">, -</p>
                     </section>
-                    <section>
+                    <section class="sectionCounterProduct">
                         <section class="counterProduct">
                             <button class="buttonDecrement" type="button" onClick="counterDecrement()">-</button>
-                            <input type="number" class="inputNumberProduct" value="1">
+                            <section class="containerInput">
+                                <input type="number" class="inputNumberProduct" value="1">
+                            </section>
                             <button class="buttonIncrement" type="button" onClick="counterIncrement()">+</button>
                         </section>
                     </section>
